--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,19 +1,27 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   color: darkslategrey;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
+  margin: 0em;
 }
 
 aside {
   float: right;
-  width: 20em;
-  margin-right: 10em;
+  width: 250px;
+  margin-top: 20px;
+  margin-right: 100px;
 }
 
-h3 {
+h1 {
+  font-size: 3em;
+  margin-bottom: 0px;
+}
+
+h1, h3 {
   text-transform: uppercase;
 }
 
@@ -27,8 +35,29 @@ img {
 }
 
 a {
-  color: #3BA1BC;
   text-decoration: none;
+}
+
+nav {
+  background-color: #EAEBEB;
+  height: 40px;
+  padding: 15px 100px;
+}
+
+nav a {
+  font-weight: bold;
+  color: inherit;
+  padding-top: 10px;
+  padding-right: 10px;
+}
+
+nav a + a::before {
+  content: "/";
+  padding-right: 10px;
+}
+ 
+article a {
+  color: #3BA1BC;
 }
 
 section {
@@ -43,4 +72,36 @@ article {
   content:"";
   display: block;
   clear: both;
+}
+
+.heading {
+  background-color: #2C9AB7;
+  color: white;
+  padding: 20px 0px 10px 100px;
+  margin: 0;
+}
+
+.subheading {
+  font-size: 1.5em;
+  font-style: italic;
+  color: white;
+  width: 13em;
+}
+
+.content {
+  margin-left: 100px;
+  margin-top: 40px;
+  margin-right: 400px;
+}
+
+.content-header {
+  font-weight: bold;
+  color: #2C9AB7;
+  margin-bottom: 20px;
+}
+
+.quote {
+  font-size: 1.5em;
+  margin: 40px 0px;
+  color: #3BA1BC;
 }
